# win-installed-keyboards

./: Cargo.toml  README.md
examples/: simple.rs
src/: keyboard_identifier.rs  language_id.rs  language_tag.rs  lib.rs  list_keyboards.rs
