[package]
name = "win-installed-keyboards"
version = "0.1.1"
description = "Provides a list of installed keyboards for Windows systems"
edition = "2021"
repository = "https://github.com/helvieq499/win-installed-keyboards"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["windows", "keyboard"]
categories = ["api-bindings", "os::windows-apis"]

[package.metadata.docs.rs]
targets = [
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-msvc",
]

[badges.maintenance]
status = "passively-maintained"

[dependencies]
enum-primitive-derive = "0.2.2"
num-traits = "0.2.15"

[dependencies.winapi]
version = "0.3"
features = [
    "winuser"
]
